[gd_scene load_steps=17 format=3 uid="uid://dsok1w31n2e4d"]

[ext_resource type="Script" path="res://gui/voices/operators/OPXOperatorDeck.gd" id="1_gg4eg"]
[ext_resource type="PackedScene" uid="uid://bv27s8atrraj0" path="res://gui/components/deck/MA3WaveShapeFlipper.tscn" id="2_7uq8c"]
[ext_resource type="PackedScene" uid="uid://dgr0kta03k8ic" path="res://gui/components/knobs/RollerKnob.tscn" id="2_pc7mc"]
[ext_resource type="Shader" path="res://gui/components/knobs/RollerPanel.gdshader" id="3_oo4nl"]
[ext_resource type="Script" path="res://gui/components/AdvancedPanelContainer.gd" id="4_qo7lg"]
[ext_resource type="PackedScene" uid="uid://dikcn6vh82w0j" path="res://gui/components/knobs/TunerSlider.tscn" id="5_8ybg4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8kl55"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vjaqs"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fu37e"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vdclw"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1t3cl"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kfuft"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x6bsj"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_td1qy"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_en0th"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mi1vd"]
resource_local_to_scene = true
shader = ExtResource("3_oo4nl")

[node name="OPXOperatorDeck" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OperatorDeck"
script = ExtResource("1_gg4eg")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2
theme_type_variation = &"VLayoutContainer"

[node name="WaveShapeFlipper" parent="Layout" instance=ExtResource("2_7uq8c")]
unique_name_in_owner = true
layout_mode = 2
short_form = true

[node name="EnvelopeBox" type="PanelContainer" parent="Layout"]
layout_mode = 2
theme_type_variation = &"AdvancedPanelContainer"
script = ExtResource("4_qo7lg")
label = "envelope"
accent_color = Color(0.13598, 0.204844, 0.314082, 0.57)

[node name="Layout" type="HBoxContainer" parent="Layout/EnvelopeBox"]
layout_mode = 2

[node name="AttackKnob" parent="Layout/EnvelopeBox/Layout" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_8kl55")
layout_mode = 2
size_flags_horizontal = 3
text = "ATT"
knob_value = 32
max_value = 63
safe_max_value = 63

[node name="DecayKnob" parent="Layout/EnvelopeBox/Layout" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_vjaqs")
layout_mode = 2
size_flags_horizontal = 3
text = "DEC"
knob_value = 32
max_value = 63
safe_max_value = 63

[node name="SustainKnob" parent="Layout/EnvelopeBox/Layout" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_fu37e")
layout_mode = 2
size_flags_horizontal = 3
text = "SUS"
knob_value = 32
max_value = 63
safe_max_value = 63

[node name="ReleaseKnob" parent="Layout/EnvelopeBox/Layout" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_vdclw")
layout_mode = 2
size_flags_horizontal = 3
text = "REL"
knob_value = 32
max_value = 63
safe_max_value = 63

[node name="LevelBox" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="KeyRateKnob" parent="Layout/LevelBox" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_1t3cl")
layout_mode = 2
size_flags_horizontal = 3
text = "KSC
RT"
max_value = 3
safe_max_value = 3

[node name="Filler" type="Control" parent="Layout/LevelBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AdvancedPanelContainer" type="PanelContainer" parent="Layout/LevelBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_type_variation = &"AdvancedPanelContainer"
script = ExtResource("4_qo7lg")

[node name="Layout" type="HBoxContainer" parent="Layout/LevelBox/AdvancedPanelContainer"]
layout_mode = 2

[node name="SustainLevelKnob" parent="Layout/LevelBox/AdvancedPanelContainer/Layout" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_kfuft")
layout_mode = 2
size_flags_horizontal = 3
text = "SUS
LVL"
max_value = 15
safe_max_value = 15

[node name="TotalLevelKnob" parent="Layout/LevelBox/AdvancedPanelContainer/Layout" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_x6bsj")
layout_mode = 2
size_flags_horizontal = 3
text = "TOT
LVL"
max_value = 127
safe_max_value = 127

[node name="TuningBox" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="MultipleKnob" parent="Layout/TuningBox" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_td1qy")
layout_mode = 2
size_flags_horizontal = 3
text = "MUL"
knob_value = 32
max_value = 63
safe_max_value = 63

[node name="Detune1Knob" parent="Layout/TuningBox" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_en0th")
layout_mode = 2
size_flags_horizontal = 3
text = "DT1"
knob_value = 32
max_value = 63
safe_max_value = 63

[node name="Detune2Box" type="VBoxContainer" parent="Layout/TuningBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Spacer" type="Control" parent="Layout/TuningBox/Detune2Box"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2

[node name="Label" type="Label" parent="Layout/TuningBox/Detune2Box"]
layout_mode = 2
size_flags_horizontal = 0
text = "DT2"

[node name="Detune2Slider" parent="Layout/TuningBox/Detune2Box" instance=ExtResource("5_8ybg4")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 3.0
left_text = "0"
right_text = "999"

[node name="AdvancedBox" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="AdvancedPanelContainer" type="PanelContainer" parent="Layout/AdvancedBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"AdvancedPanelContainer"
script = ExtResource("4_qo7lg")

[node name="Layout" type="HBoxContainer" parent="Layout/AdvancedBox/AdvancedPanelContainer"]
layout_mode = 2

[node name="AmplitudeKnob" parent="Layout/AdvancedBox/AdvancedPanelContainer/Layout" instance=ExtResource("2_pc7mc")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_mi1vd")
layout_mode = 2
size_flags_horizontal = 3
text = "AMP
SHF"

[node name="Spacer" type="Control" parent="Layout/AdvancedBox/AdvancedPanelContainer/Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Filler" type="Control" parent="Layout/AdvancedBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
